--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,50 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pintea_Ionica_Alexandru_Lab2"
         mc:Ignorable="d"
-        Title="Virtual Doughnuts Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        Title="Virtual Doughnuts Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
     <Grid Margin="0,-3,0,3">
-        <Label x:Name="lblTitle"  HorizontalAlignment="Left" Margin="229,10,0,0" VerticalAlignment="Top" Content="Doughnuts - Bake &amp; Sale" FontWeight="Bold" FontSize="24" RenderTransformOrigin="-0.215,0.392" Width="421"/>
-        <GroupBox x:Name="gbRaised" Header="Raised" Margin="40,52,544,275" FontWeight="Bold"/>
+
+        <Label x:Name="lblTitle"  HorizontalAlignment="Left" Margin="229,10,0,0" VerticalAlignment="Top" Content="Doughnuts - Bake &amp; Sale" FontWeight="Bold" FontSize="24" RenderTransformOrigin="-0.215,0.392" Width="421" Grid.ColumnSpan="3"/>
+        <GroupBox x:Name="gbRaised" Header="Raised" Margin="40,52,538,275" FontWeight="Bold"/>
         <Label x:Name="lblGlazedRaised" Content="Glazed" HorizontalAlignment="Left" Margin="54,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.146,-4.764" Height="34" Width="63"/>
         <Label x:Name="lblSugarRaised" Content="Sugar" HorizontalAlignment="Left" Margin="54,106,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.146,-4.764" Height="34" Width="63"/>
         <TextBox x:Name="txtGlazedRaised" HorizontalAlignment="Left" Margin="122,80,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5"/>
         <TextBox x:Name="txtSugarRaised" HorizontalAlignment="Left" Margin="122,106,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <GroupBox Header="Filled" Margin="278,57,251,243" FontWeight="Bold"/>
+        <GroupBox Header="Filled" Margin="278,57,17,243" FontWeight="Bold" Grid.ColumnSpan="2"/>
         <Label x:Name="lblLemonFilled" Content="Lemon" HorizontalAlignment="Left" Margin="287,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.454,-4.981"/>
         <Label x:Name="lblChocolateFilled" Content="Chocolate" HorizontalAlignment="Left" Margin="287,107,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblVanillaFilled" Content="Vanilla" HorizontalAlignment="Left" Margin="289,141,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtVanillaFilled" HorizontalAlignment="Left" Margin="364,149,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.625,0.288"/>
         <TextBox x:Name="txtLemonFilled" HorizontalAlignment="Left" Margin="364,84,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.461,0.61"/>
         <TextBox x:Name="txtChocolateFilled" HorizontalAlignment="Left" Margin="364,114,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <GroupBox x:Name="gbSale" Header="Current Sale" FontWeight="Bold" Margin="25,193,45,25"/>
+        <GroupBox x:Name="gbSale" Header="Current Sale" FontWeight="Bold" Margin="25,193,45,25" Grid.ColumnSpan="3"/>
         <Label x:Name="lblQuantity" Content="Quantity" HorizontalAlignment="Left" Margin="40,217,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblType" Content="Type" HorizontalAlignment="Left" Margin="245,221,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrice" Content="Price" HorizontalAlignment="Left" Margin="440,225,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Margin="96,225,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Margin="96,225,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" KeyUp="txtQuantity_KeyPress"/>
         <ComboBox x:Name="cmbType" HorizontalAlignment="Left" Margin="289,222,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5">
         </ComboBox>
-        <TextBox x:Name="txtPrice" HorizontalAlignment="Left" Margin="495,225,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5">
+        <TextBox x:Name="txtPrice" HorizontalAlignment="Left" Margin="495,225,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="3">
         </TextBox>
         <Label x:Name="lblTotal" Content="Total" FontWeight="Bold" HorizontalAlignment="Left" Margin="440,386,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtTotal" HorizontalAlignment="Left" Margin="495,386,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <ListBox Margin="96,256,185,73"/>
-        <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" Margin="654,256,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnCheckOut" Content="Check Out" FontWeight="Bold" HorizontalAlignment="Left" Margin="654,346,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnRemoveItem" Content="Remove Item" HorizontalAlignment="Left" Margin="647,294,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtTotal" HorizontalAlignment="Left" Margin="495,386,0,0" Text="0" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="3"/>
+        <ListBox Margin="96,256,185,73" Grid.ColumnSpan="3"/>
+        <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" Margin="660,241,0,0" VerticalAlignment="Top" RenderTransformOrigin="8.863,0.304"/>
+        <Button x:Name="btnCheckOut" Content="Check Out" FontWeight="Bold" HorizontalAlignment="Left" Margin="664,346,0,0" VerticalAlignment="Top" RenderTransformOrigin="9.568,0.375"/>
+        <Button x:Name="btnRemoveItem" Content="Remove Item" HorizontalAlignment="Left" Margin="660,301,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.594,-1.512"/>
 
-        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top"
-Width="131" Margin="0,26,0,0">
+        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="131" Margin="0,26,0,0">
             <MenuItem Header="File">
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="exitToolStripMenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="_Doughnuts">
                 <MenuItem Header="Make">
                     <MenuItem Header="Raised">
-                        <MenuItem x:Name="glazedMenuItem" Header="Glazed"/>
-                        <MenuItem x:Name="sugarMenuItem" Header="Sugar"/>
+                        <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" IsCheckable="True" Click="glazedToolStripMenuItem_Click"/>
+                        <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" IsCheckable="True" Click="sugarToolStripMenuItem_Click"/>
                     </MenuItem>
                     <MenuItem Header="Filled"/>
                 </MenuItem>
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"/>
             </MenuItem>
         </Menu>
 
